[package]
name = "twitch_like"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["ws"] }
http = "0.2.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs"] }
twitch-irc = "5.0.0"
